--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
    <head>
-     ,title> Hello there, awesome person!</title>
+     <title> Hello there, awesome person!</title>
     </head>
   </body>
 </html>
