--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <head>
      <title> Hello there, awesome person!</title>
     </head>
+    <img src="https://avatars.githubusercontent.com/u/91837410?v=4">
   </body>
 </html>
 </h1>
