--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <body>
    <head>
      <title> Hello there, awesome person!</title>
+    <link rel="stylesheet" href="style.css"> 
     </head>
     <img src="https://avatars.githubusercontent.com/u/91837410?v=4">
     <ol>
