--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
    <head>
      <title> Hello there, awesome person!</title>
     <link rel="stylesheet" href="style.css"> 
+     <h1>Geneae Shajan</h1>
     </head>
     <img src="https://avatars.githubusercontent.com/u/91837410?v=4">
     <ol>
       <li>www.google.com</li>
             <li>My favorite site is <a href="https://google.com">Google</a>!</li>
-<li>www.cowin gov.in</li>
             <li>My favorite site is <a href="https://cowin gov.com">Cowin gov</a>!</li>
- <li>www.instagram.com</li>
             <li>My favorite site is <a href="https://instagram.com">Instagram</a>!</li>
  </ol>
   </body>
