--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
      <h1>Geneae Shajan</h1>
     </head>
     <img src="https://avatars.githubusercontent.com/u/91837410?v=4">
+    <h3>My favorite site's</h3>
     <ol>
-      <li>www.google.com</li>
-            <li>My favorite site is <a href="https://google.com">Google</a>!</li>
-            <li>My favorite site is <a href="https://cowin gov.com">Cowin gov</a>!</li>
-            <li>My favorite site is <a href="https://instagram.com">Instagram</a>!</li>
- </ol>
+            <li><a href="https://google.com">Google</a></li>
+            <li><a href="https://cowin gov.com">Cowin gov</a>!</li>
+            <li><a href="https://instagram.com">Instagram</a>!</li>
+  </ol>
   </body>
 </html>
 </h1>
