--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      <h1>Geneae Shajan</h1>
     </head>
     <img src="https://avatars.githubusercontent.com/u/91837410?v=4">
-    <h3>My favorite site's</h3>
+    My favorite site's
     <ol>
             <li><a href="https://google.com">Google</a></li>
             <li><a href="https://cowin gov.com">Cowin gov</a>!</li>
