--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
      <h1>Geneae Shajan</h1>
     </head>
     <img src="https://avatars.githubusercontent.com/u/91837410?v=4">
-    My favorite site's
+    <br>
+    <h3>My favorite site's</h3>
     <ol>
             <li><a href="https://google.com">Google</a></li>
             <li><a href="https://cowin gov.com">Cowin gov</a>!</li>
