--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
    <head>
      <title> Hello there, awesome person!</title>
     <link rel="stylesheet" href="style.css"> 
-     <h1>Geneae Shajan</h1>
     </head>
+    <h1>Geneae Shajan</h1>
+     Welcome All.
     <img src="https://avatars.githubusercontent.com/u/91837410?v=4">
-    <br>
     <h3>My favorite site's</h3>
     <ol>
-            <li><a href="https://google.com">Google</a></li>
-            <li><a href="https://cowin gov.com">Cowin gov</a>!</li>
-            <li><a href="https://instagram.com">Instagram</a>!</li>
+            <li>My favorite site is<a href="https://google.com">Google</a>!</li>
+            <li>Covid Vaccine <a href="https://cowin gov.com">Cowin gov</a>!</li>
+            <li>My faverate Social Media is<a href="https://instagram.com">Instagram</a>!</li>
   </ol>
   </body>
 </html>
