--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
-<h1>
-  <html>
-  <body>
-   <head>
-     <title> Hello there, awesome person!</title>
-    <link rel="stylesheet" href="style.css"> 
-    </head>
+<html>
+  <head>
+    <title>Geneae Shajan</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body> 
     <h1>Geneae Shajan</h1>
-     Welcome All.
-    <img src="https://avatars.githubusercontent.com/u/91837410?v=4">
-    <h3>My favorite site's</h3>
-    <ol>
-            <li>My favorite site is<a href="https://google.com">Google</a>!</li>
-            <li>Covid Vaccine <a href="https://cowin gov.com">Cowin gov</a>!</li>
-            <li>My faverate Social Media is<a href="https://instagram.com">Instagram</a>!</li>
-  </ol>
+    Hello 
+    <img src="https://octodex.github.com/images/vinyltocat.png">
+    <ul>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
+    </ul>
   </body>
 </html>
-</h1>
