--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body> 
     <h1>Geneae Shajan</h1>
     Hello 
-    <img src="https://octodex.github.com/images/vinyltocat.png">
+    <img src="https://avatars.githubusercontent.com/u/91837410?v=4">
     <ul>
       <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
     </ul>
